remove calls deprecated methods